Updating things to break out AWS Reference Services
